# de-compute-setup

./: .gitignore  LICENSE  README.md  entrypoint-jupyter.sh  pyproject.toml
notebooks/: spark_base.py
spark_apps/: main.py
spark_with_jupyter_notebook/: .gitignore  Readme.md  docker-compose.yml
