[project]
name = "de-compute-setup"
version = "0.1.0"
description = "Basic setup for spark and jupyter notebook"
authors = [
    {name = "Rajesh Kumar",email = "rajesh.kumar@learnbe4.in"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "pandas>=1.5.2",
  "pyarrow>=14.0.1",
  "pyspark>=3.5.0",
  "delta-spark>=2.2.0",
  "pytest==7.3.2",
  "numpy>=1.24.0"
]
